# mlops_classifier

./: .gitignore  LICENSE  Makefile  README.md  classification_report.txt  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yml  continuous_container.yml  tests.yml
data/raw/random_mnist_images/: mnist_sample.npy
dockerfiles/: predict.dockerfile  sepultura.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_classifier/: __init__.py  config_train.yaml  predict_model.py  train_cml.py  train_model.py  train_reproducibly.py
mlops_classifier/data/: make_dataset.py
mlops_classifier/models/: model.py
mlops_classifier/visualizations/: visualize.py
models/MyAwesomeModel/: model.pt
outputs/2024-01-04/14-01-39/.hydra/: hydra.yaml
outputs/2024-01-04/14-01-47/.hydra/: hydra.yaml
outputs/2024-01-04/14-02-07/.hydra/: hydra.yaml
outputs/2024-01-04/14-02-47/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-04/14-04-54/.hydra/: hydra.yaml
tests/: __init__.py  test_one.py  test_two.py
wandb/: latest-run
wandb/run-20240105_111434-y8x903zr/: run-y8x903zr.wandb
wandb/run-20240105_111434-y8x903zr/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_112221-gvvnujzx/: run-gvvnujzx.wandb
wandb/run-20240105_112221-gvvnujzx/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240105_112339-nbkeapxu/: run-nbkeapxu.wandb
wandb/run-20240105_112339-nbkeapxu/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+68 files in other folders)
